Finishing up the Index Page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Elite Kicks - Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    
+    <!-- Ahnaf Bhuiya - 2230282 -->
+    <header class="animated">
+        <h1>Elite Kicks</h1>
+        <p>Premium Football Boots for Champions</p>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <section class="home-hero animated">
+            <div class="main-content">
+                <h2>Welcome to Elite Kicks</h2> <br>
+                <p>Your destination for premium football boots from top brands like Nike, Adidas, and Puma.</p> <br>
+                <button class="btn primary-btn" onclick="navigateToProducts()">Explore Collection</button>
+            </div>
+        </section>
+
+        <section class="main-content animated">
+            <br> <h2>Why Choose Us?</h2>
+            <div class="flex-container">
+                <div class="card">
+                    <h3>Authentic Products</h3>
+                    <p>100% genuine boots from official partners</p>
+                </div>
+                <div class="card">
+                    <h3>Fast Shipping</h3>
+                    <p>Worldwide delivery within 5-7 business days</p>
+                </div>
+                <div class="card">
+                    <h3>Expert Support</h3>
+                    <p>Football specialists available 24/7</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer class="animated">
+        <p>&copy; 2023 Elite Kicks. All rights reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
